<resources>
    <string name="com.crashlytics.android.build_id">46cc7032-c8e5-4aa1-9c3f-7916c91607d5</string>
    <string name="API_MY_LOCATION_ACCURACY">"My Location 
Accurate to {0} meters"</string>
    <string name="API_OUTDATED_WARNING">This app uses an outdated version of Maps. It might not work properly.</string>
    <string name="BACK_TO_LIST">Back to list</string>
    <string name="CLOSE_SOFTKEY">Close</string>
    <string name="COMPASS_ALT_TEXT">Compass</string>
    <string name="DIRECTIONS_ALT_TEXT">Get directions</string>
    <string name="GOOGLE_MAP">Google Map</string>
    <string name="LEVEL_ALT_TEXT">Level {0}</string>
    <string name="MY_LOCATION_ALT_TEXT">My Location</string>
    <string name="OPEN_GMM_ALT_TEXT">Open in Google Maps</string>
    <string name="YOUR_LOCATION">Your current location</string>
    <string name="ZOOM_IN_ALT_TEXT">Zoom in</string>
    <string name="ZOOM_OUT_ALT_TEXT">Zoom out</string>
    <string name="about">About</string>
    <string name="action_bar_save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="add_food_item">ADD</string>
    <string name="add_new_favourites">ADD FAVOURITES</string>
    <string name="address_already_added">This address has already been added to favourites list</string>
    <string name="airport_rates_text">" Airport rates may differ. Refer Rate Card for details."</string>
    <string name="alternate_number_text">Booking for a friend?</string>
    <string name="always_share_ride_txt">"  Always share my ride with my contact"</string>
    <string name="amount">Rs. %1$,.2f</string>
    <string name="app_id">152343324822474</string>
    <string name="app_name">OlaCabs</string>
    <string name="app_needs_update_desc">Please update the app to continue using Ola services.</string>
    <string name="app_needs_update_neg_btn">No, thanks</string>
    <string name="app_needs_update_pos_btn">Update App</string>
    <string name="app_needs_update_title">App needs update</string>
    <string name="approve_otp">Approve</string>
    <string name="approved_otp">approved OTP</string>
    <string name="apsalar_app_id">ola_prod</string>
    <string name="apsalar_secrect">yPoRoARM</string>
    <string name="auth_signup_error_header">Sign-in Error</string>
    <string name="auth_signup_error_text" />
    <string name="authenticate_with">Select an option for Faster Payment</string>
    <string name="auto_fare_sub_text">"Note: Please pay additional convenience charge of
Rs.10 to your driver"</string>
    <string name="auto_fare_text">"Book your nearest Auto
without ever having to step out!
Pay your driver by meter!"</string>
    <string name="auto_sub_text">ETAs may not be accurate in the case of Autos.</string>
    <string name="auto_text">"Auto rickshaw rides have to be paid for in cash.
Ola Money, discounts and offers are not applicable.
Please pay additional convenience charge of
Rs.10 to your driver."</string>
    <string name="bank_page_loading">Please wait. Bank page is loading..</string>
    <string name="booking_address_not_found">No address found</string>
    <string name="btn_action">btn_action</string>
    <string name="call_add_ola_money">ADD OLA MONEY</string>
    <string name="call_back_failure">Failed to Callback! Please try again</string>
    <string name="call_in_while">We will be calling you shortly</string>
    <string name="call_me">Call me</string>
    <string name="call_us">CALL US TO BOOK YOUR RIDE</string>
    <string name="cancel">cancel</string>
    <string name="card_name">Card name</string>
    <string name="card_not_registered_with_pin">Your card has not been registered for PIN yet. Do you want to continue with PIN?</string>
    <string name="card_number">Card Number</string>
    <string name="cashCardNote">"Note: In the next step you will be redirected to your bank's website to verify yourself."</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="change_password_header">Change Password</string>
    <string name="choose">choose</string>
    <string name="click_here">Click here</string>
    <string name="code_peak_charge">₹40</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"This app won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="commono_google_play_services_api_unavailable_text">This app requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="confirm_order_button_text">TRACK YOUR ORDER</string>
    <string name="confirm_order_header">Your food is on its way!</string>
    <string name="cvv">CVV</string>
    <string name="delivery_main_text">{0} will be delivered to the recipient.</string>
    <string name="delivery_sub_text">KNOW MORE</string>
    <string name="delivery_text">"{0} will be deducted from your
Ola Money balance on confirmation."</string>
    <string name="expires">Expiry</string>
    <string name="font_OpenSans_Bold">OpenSans-Bold.ttf</string>
    <string name="font_OpenSans_Light">OpenSans-Light.ttf</string>
    <string name="font_OpenSans_Regular">OpenSans-Regular.ttf</string>
    <string name="font_OpenSans_Semibold">OpenSans-Semibold.ttf</string>
    <string name="hint_add_recepient">ADD RECIPIENT NAME</string>
    <string name="kp_sub_text">ETAs may not be accurate in the case of Kaali Peeli taxis.</string>
    <string name="kp_text">"Kaali Peeli rides have to be paid for in cash.
Ola Money, discounts and offers are not applicable."</string>
    <string name="name_on_card">Name on Card</string>
    <string name="safety_footer_0">swipe to continue.</string>
    <string name="safety_header_1">"ADD AN EMERGENCY
CONTACT."</string>
    <string name="safety_text_0">"Welcome to Ola!
Please go through the user guide
about our new safety features."</string>
    <string name="safety_text_1">We will alert them when you need help.</string>
    <string name="store_card_check">Store this card</string>
    <string name="text_add_landmark">ADD LANDMARK</string>
    <string name="text_add_locality">ADD LOCALITY</string>
    <string name="text_add_recepient">ADD RECIPIENT NO.</string>
    <string name="text_cancel_caps">CANCEL</string>
    <string name="text_category">CATEGORY</string>
    <string name="text_confirm_caps">CONFIRM</string>
    <string name="text_delivery_date">DELIVERY DATE</string>
    <string name="text_drop_landmark">DROP LANDMARK</string>
    <string name="text_drop_point">DROP POINT</string>
    <string name="text_mobile_number">MOBILE NUMBER</string>
    <string name="text_name_caps">NAME</string>
    <string name="text_no_favourties">"No favourite
added yet!"</string>
    <string name="text_save_favourite">"Select frequent pickup locations 
and save them as favourites 
for instant access."</string>
    <string name="text_sec">sec</string>
    <string name="text_timer">60</string>
    <string name="text_timer_left">left</string>
</resources>