<?xml version="1.0" encoding="utf-8"?>
<LinearLayout app:layout_gravity="50" app:orientation="1" app:background="@color/ola_white_semi_transparent" app:layout_width="-1" app:layout_height="-2">
    <View app:background="@color/ola_green_flurescent_line_transparent" app:layout_width="-1" app:layout_height="1dp" />
    <LinearLayout app:orientation="0" app:id="@id/recipient_layout" app:visibility="2" app:layout_width="-1" app:layout_height="-2" app:baselineAligned="false"
        <LinearLayout app:orientation="1" app:id="@id/receiver_name_layout" app:padding="@dimen/margin_small" app:layout_width="-2" app:layout_height="-2" app:layout_weight="1.0">
            <com.olacabs.customer.ui.widgets.FontTextView app:textSize="@dimen/xxsmall" app:textColor="@drawable/text_def_textview" app:layout_width="-2" app:layout_height="-2" app:text="@string/text_name_caps" app:font="@string/font_OpenSans_Regular" />
            <com.olacabs.customer.ui.widgets.FontTextView app:textSize="@dimen/xsmall" app:textColor="@drawable/text_def_textview" app:id="@id/receiver_name" app:layout_width="-2" app:layout_height="-2" app:hint="@string/hint_add_recepient" app:font="@string/font_OpenSans_Regular" />
        </LinearLayout>
        <View app:background="@color/ola_green_flurescent_line_transparent" app:layout_width="1dp" app:layout_height="-1" />
        <LinearLayout app:orientation="1" app:id="@id/receiver_number_layout" app:padding="@dimen/margin_small" app:layout_width="-2" app:layout_height="-2" app:layout_weight="1.0">
            <com.olacabs.customer.ui.widgets.FontTextView app:textSize="@dimen/xxsmall" app:textColor="@drawable/text_def_textview" app:layout_width="-2" app:layout_height="-2" app:text="@string/text_mobile_number" app:font="@string/font_OpenSans_Regular" />
            <com.olacabs.customer.ui.widgets.FontTextView app:textSize="@dimen/xsmall" app:textColor="@drawable/text_def_textview" app:id="@id/receiver_number" app:layout_width="-2" app:layout_height="-2" app:hint="@string/text_add_recepient" app:font="@string/font_OpenSans_Regular" />
        </LinearLayout>
    </LinearLayout>
    <View app:background="@color/ola_green_flurescent_line_transparent" app:layout_width="-1" app:layout_height="1dp" />
    <RelativeLayout app:orientation="0" app:id="@id/delivery_date_layout" app:padding="@dimen/margin_small" app:layout_width="-1" app:layout_height="0dp" app:layout_weight="1.0">
        <com.olacabs.customer.ui.widgets.FontTextView app:textSize="@dimen/xxsmall" app:textColor="@drawable/text_def_textview" app:id="@id/delivery_date_header" app:layout_width="-2" app:layout_height="-2" app:text="@string/text_delivery_date" app:font="@string/font_OpenSans_Regular" />
        <com.olacabs.customer.ui.widgets.FontTextView app:textSize="@dimen/xsmall" app:textColor="@color/ola_black_text" app:id="@id/delivery_date" app:layout_width="-1" app:layout_height="-2" app:layout_below="@id/delivery_date_header" app:font="@string/font_OpenSans_Regular" />
        <ImageView app:layout_gravity="10" app:id="@id/item_arrow_delivery_date" app:layout_width="-2" app:layout_height="-2" app:layout_marginRight="@dimen/margin_nano" app:src="@drawable/ic_kp_dropdown" app:layout_alignParentRight="true" app:layout_centerVertical="true" />
    </RelativeLayout>
    <View app:background="@color/ola_green_flurescent_line_transparent" app:layout_width="-1" app:layout_height="1dp" />
    <com.olacabs.customer.ui.widgets.FontTextView app:textSize="@dimen/xxsmall" app:textColor="@color/ola_black_text" app:gravity="1" app:id="@id/confirmation_text_1" app:paddingLeft="@dimen/margin_xlarge" app:paddingTop="@dimen/margin_small" app:paddingRight="@dimen/margin_xlarge" app:layout_width="-1" app:layout_height="-2" app:text="@string/delivery_main_text" app:font="@string/font_OpenSans_Semibold" />
    <com.olacabs.customer.ui.widgets.FontTextView app:textSize="@dimen/xxsmall" app:textColor="@color/ola_black_text" app:gravity="1" app:id="@id/confirmation_text_2" app:paddingLeft="@dimen/margin_small" app:paddingTop="@dimen/margin_nano" app:paddingRight="@dimen/margin_small" app:paddingBottom="@dimen/margin_small" app:layout_width="-1" app:layout_height="-2" app:text="@string/delivery_text" app:font="@string/font_OpenSans_Regular" />
    <com.olacabs.customer.ui.widgets.FontTextView app:textSize="@dimen/xxsmall" app:textStyle="1" app:textColor="@color/ola_yellow_light_text_link" app:textColorLink="@color/ola_yellow_light_text_link" app:gravity="1" app:linksClickable="true" app:id="@id/confirmation_text_3" app:paddingLeft="@dimen/margin_small" app:paddingTop="@dimen/margin_nano" app:paddingRight="@dimen/margin_small" app:paddingBottom="@dimen/margin_small" app:layout_width="-1" app:layout_height="-2" app:text="@string/delivery_sub_text" app:font="@string/font_OpenSans_Regular" />
    <LinearLayout app:orientation="0" app:id="@id/layout_ride_buttons" app:layout_width="-1" app:layout_height="@dimen/booking_buttons_panel_height">
        <com.olacabs.customer.ui.widgets.FontButton app:textColor="@drawable/text_black_button_selector" app:id="@id/button_ride_cancel" app:background="@drawable/bg_button_black_default" app:layout_width="-1" app:layout_height="-1" app:text="@string/text_cancel_caps" app:layout_weight="1.0" app:font="@string/font_OpenSans_Light" />
        <View app:background="#7c7f2e" app:layout_width="1dp" app:layout_height="-1" />
        <com.olacabs.customer.ui.widgets.FontButton app:textColor="@drawable/text_black_button_selector" app:id="@id/button_ride_conform" app:background="@drawable/bg_button_black_default" app:layout_width="-1" app:layout_height="-1" app:text="@string/text_confirm_caps" app:layout_weight="1.0" app:font="@string/font_OpenSans_Light" />
    </LinearLayout>
</LinearLayout>
